--- a/department/cse.html
+++ b/department/cse.html
@@ -590,7 +590,7 @@ box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25);
 }
     </style>
 </head>
-<header id="nav-placeholder"></header>
+<!-- <header id="nav-placeholder"></header> -->
 <body>
 
 <div class="header1">
