Refactor CSS styles and remove unnecessary code
- Removed unused CSS styles and unnecessary code in preloader.html and nav.html templates.
- Updated index.html to uncomment preloader section.

Fix image paths in event.js

- Corrected image paths in event.js file to ensure proper display of event images.

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
   </head>
   <body>
-    <!-- <section id="preloader-placeholder"></section> -->
+    <section id="preloader-placeholder"></section>
     
 
       <main class="hidden" id="main-content" >
