Refactor CSS styles and remove unnecessary code

--- a/top/naac.html
+++ b/top/naac.html
@@ -200,7 +200,9 @@
                 display: flex;
                 white-space: nowrap;
             }
-            
+            .scroll-to-top.show{
+                display: none;
+            }
         }
         footer {
             height: 200px; /* Adjust according to your footer height */
