--- a/others/event.html
+++ b/others/event.html
@@ -6,6 +6,7 @@
     <title>GVPCDPGC | Events</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
+        
         body {
             font-family: "inter",sans-serif;
             margin: 20px;
@@ -149,6 +150,7 @@
             background-color: rgba(0, 0, 0, 0.5); /* Black with opacity */
         }
 
+
         .modal-content {
             background-color: #fefefe;
             margin: 15% auto;
@@ -159,7 +161,9 @@
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-
+         .modal-content p {
+            margin: 20px ;
+        } 
         .close {
             color: #aaa;
             float: right;
@@ -180,6 +184,7 @@
 }
 
 .carousel-inner {
+    min-width: 600px;
     display: flex;
     overflow: hidden;
     border-radius: 10px;
@@ -299,6 +304,7 @@
     <!-- <section id="preloader-placeholder"></section> -->
     <main class="hidden" id="main-content">
     <header id="nav-placeholder"></header>
+    
     <div style="margin: 20px;">
         <div class="page1">
             <h1>Events</h1>
@@ -317,7 +323,7 @@
         <!-- Modal for event details -->
         <div id="eventModal" class="modal">
             <div class="modal-content">
-                <span class="close" id="closeModal">&times;</span>
+                <span class="close" id="closeModal" style="margin-bottom: 15px;">&times;</span>
                 <h2 id="modalEventTitle"></h2>
                 <div id="modalEventImage" class="carousel">
                     <div class="carousel-inner" id="carouselInner"></div>
@@ -350,14 +356,14 @@
                 const eventBox = document.createElement('div');
                 eventBox.classList.add('event-box');
                 eventBox.innerHTML = `
-                    <div class="event-date">
+                    <div class="event-date" style="margin-bottom: 15px;">
                         <span class="month-day">${new Date(event.date).toLocaleDateString('en-US', { month: 'short', day: 'numeric' })},</span>
                         <span class="year">${new Date(event.date).getFullYear()}</span>
                         <span class="arrow">→</span>
                     </div>
                     <img src="${Array.isArray(event.image) ? event.image[0] : event.image}" alt="${event.title}" class="event-image">
                     <a href="#" class="event-title" data-event='${JSON.stringify(event)}'>${event.title}</a>
-                    <address>by ${event.department}</address>
+                    <address style="margin-bottom: 15px;">by ${event.department}</address>
                     <p>${event.description}</p>
                 `;
                 eventContainer.appendChild(eventBox);
