Refactor margin-top in .singleLink class

--- a/department/cse.html
+++ b/department/cse.html
@@ -101,7 +101,7 @@ body {
     background-color: #22316c;
 }
 .singleLink{
-    top: -10px;
+    margin-top: -5px;
 }
 @media screen and (max-width: 768px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
@@ -113,6 +113,9 @@ body {
   }
   .navHead{
     margin-right: 0%;
+}
+.singleLink{
+    margin-top: 0;
 }
 }
 
