--- a/program/BTech/civil.html
+++ b/program/BTech/civil.html
@@ -860,7 +860,7 @@ if (x.className === "topnav") {
 </script>
     </div>
     <div class="header-container">
-        <h1>Department of Computer Science and Engineering</h1>
+        <h1>Department of Civil Engineering</h1>
         <div class="burger" id="menu-icon">
             <div class="strip burger-strip">
                 <div></div>
