Refactor HTML structure and styles for About page

--- a/index.html
+++ b/index.html
@@ -774,6 +774,7 @@
     @media screen and (max-width: 768px) {
       .page1,.page2,.page3,.page4,.page5{
         width: 100%;
+        overflow-x: hidden;
       }
       .knowmr{
         height: 40vh;
