Refactor HTML structure and styles for About page

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 alt="GVP"
               />
             </div>
-            <img src="./assects/gvplogorm.png" width="50px" style="" alt="">
+            <img id="centerImg" src="./assects/gvplogorm.png" width="50px" height="50px" style="" alt="">
             <div class="gridDiv1">
               <img
                 src="./assects/engeneering.png"
